@@ -1,3 +1,8 @@
+2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>
+
+	* unix/tcl.m4: Better building on OpenBSD.
+	* unix/configure: (autoconf-2.59)
+
 2010-12-10  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tcl.h:       [Bug 3129448]: Possible over-allocation on
